syntax = "proto3";

option csharp_namespace = "Tracking.API";

package tracking;

service TrackingService {
	rpc AddLocation (AddLocationRequest) returns (AddLocationResponse);
	rpc AddLocationStream (stream AddLocationRequest) returns (AddLocationResponse);
}

message AddLocationRequest {
	float latitude = 1;
	float longitude = 2;
	int32 speed = 3;
	float direction = 4;
}

message AddLocationResponse {
	bool is_confirmed = 1; 
}
